# jriver_homeassistant

./: LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/actions/: validate.yml
.github/workflows/: publish.yaml  test.yaml  validate.yml
custom_components/jriver/: __init__.py  browse_media.py  config_flow.py  const.py  coordinator.py  entity.py  icons.json  manifest.json  media_player.py  remote.py  sensor.py  services.yaml  strings.json
custom_components/jriver/translations/: en.json  pt.json
tests/: __init__.py  conftest.py  test_config_flow.py
