[tool.poetry]
name = "jriver_homeassistant"
version = "0.3.0"
description = "A custom Home Assistant integration for jriver"
authors = ["3ll3d00d <mattkhan+jrha@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "http://github.com/3ll3d00d/jriver_homeassistant"
repository = "http://github.com/3ll3d00d/jriver_homeassistant"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
homeassistant = "2024.10.2"
hamcws = "*"
aioitertools = "*"
wakeonlan = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-aiohttp = "*"
pytest-cov = "*"
pytest-homeassistant-custom-component = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
