[project]
name = "jriver_homeassistant"
version = "0.4.0"
description = "A custom Home Assistant integration for jriver"
authors = [
    { name = "3ll3d00d", email = "mattkhan+jrha@gmail.com" }
]
license = "MIT"
readme = "README.md"
homepage = "http://github.com/3ll3d00d/jriver_homeassistant"
repository = "http://github.com/3ll3d00d/jriver_homeassistant"
requires-python = ">=3.13, <3.14"
dependencies = [
    "homeassistant >=2025.4.4",
    "hamcws",
    "aioitertools",
    "wakeonlan >=3.1.0, <4.0.0"
]

[tool.poetry]
include = [
    "LICENSE",
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-aiohttp = "*"
pytest-cov = "*"
pytest-homeassistant-custom-component = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
